<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverConfirmActivity"
    android:background="@color/common_google_signin_btn_text_light_default"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/driver_pickup_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/rider_driver_confirm_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/rider_info_driver_confirm" />

        <TextView
            android:id="@+id/rider_username_driver_confirm_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/username_driver_confirm"
            android:clickable="true"/>

        <TextView
            android:id="@+id/rider_phone_number_driver_confirm_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/phone_number_driver_confirm" />

        <TextView
            android:id="@+id/rider_email_driver_confirm_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/email_driver_confirm" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/waiting_for_rider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_for_rider_driver_confirm"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/cancel_pickup_button_confirm_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/cancel_pickup_driver_pickup"
                    android:backgroundTint="#E38349"/>

            </LinearLayout>

            <Button
                android:id="@+id/driver_confirm_pickup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pickup_driver_confirm"
                android:backgroundTint="#E38349"/>

        </FrameLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/driver_drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>





