<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".moneyScreen"
    android:background="@color/common_google_signin_btn_text_light_default"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_money_screen"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="32dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balance_money_screen"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/balance_set"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

        </LinearLayout>



        <Button
            android:id="@+id/add_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/add_5_money_screen"
            android:textColor="#FFFFFF"
            android:backgroundTint="#E38349"
            android:textSize="24sp" />



        <Button
            android:id="@+id/add_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/add_25_money_screen"
            android:textColor="#FFFFFF"
            android:backgroundTint="#E38349"
            android:textSize="24sp" />



        <Button
            android:id="@+id/add_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/add_50_money_screen"
            android:textColor="#FFFFFF"
            android:backgroundTint="#E38349"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/done_money_screen"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#EFEDED"
            android:backgroundTint="#E38349"
            android:textSize="24sp" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/money_drawer"/>


</androidx.drawerlayout.widget.DrawerLayout>