<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiderConfirmPickup"
    android:background="@color/common_google_signin_btn_text_light_default"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/rider_pickup_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/rider_confirm_driver_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@mipmap/marshmellow"
                android:scaleType="centerCrop"
                app:civ_border_color="#E38349"
                app:civ_border_width="0dp"></com.mikhaellopez.circularimageview.CircularImageView>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/driver_rider_confirm_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_margin="5dp"
                    android:text="@string/driver_info_rider_confirm_pickup" />

                <TextView
                    android:id="@+id/driver_username_rider_confirm_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:layout_margin="5dp"
                    android:text="@string/rider_confirm_pickup"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/driver_rating_rider_confirm_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:layout_margin="5dp"
                    android:text="@string/rating_rider_confirm_pickup"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/driver_phone_number_rider_confirm_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:layout_margin="5dp"
                    android:text="@string/phone_number_rider_confirm_pickup" />

                <TextView
                    android:id="@+id/driver_email_rider_confirm_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:layout_margin="5dp"
                    android:text="@string/email_rider_confirm_pickup" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/waiting_for_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_for_driver_rider_confirm_pickup"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/cancel_request_button_confirm_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/cancel_request_rider_confirm_pickup"
                    android:backgroundTint="#E38349"/>

            </LinearLayout>

            <Button
                android:id="@+id/rider_confirm_pickup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pickup_rider_confirm_pickup"
                android:backgroundTint="#E38349"/>

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>




</androidx.drawerlayout.widget.DrawerLayout>