<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateQR">

    <ImageView
        android:id="@+id/QR_Image"
        android:layout_width="285dp"
        android:layout_height="280dp"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_tall_divider"
        android:contentDescription="@string/qr_code_generate_qr" />

    <TextView
        android:id="@+id/rider_pay_textview"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/please_present_qr_code_to_driver_generate_qr"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/QR_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thank_you_TextView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:text="@string/thank_you_generate_qr"
        android:textAlignment="center"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QR_Image" />

    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thank_you_TextView"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/thumbs_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Thumbs up" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="invisible" />

        <Button
            android:id="@+id/thumbs_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Thumbs down" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>